@@ -14998,4 +14998,66 @@ Subject length lower bound = 0
         End
 ------------------------------------------------------------------
 
+# Tests for NULL characters in comments and verb "names" and callouts
+
+# /A#B\x00C\x0aZ/
+/41 23 42 00 43 0a 5a/Bx,hex
+------------------------------------------------------------------
+        Bra
+        AZ
+        Ket
+        End
+------------------------------------------------------------------
+
+# /A+#B\x00C\x0a+/
+/41 2b 23 42 00 43 0a 2b/Bx,hex
+------------------------------------------------------------------
+        Bra
+        A++
+        Ket
+        End
+------------------------------------------------------------------
+
+# /A(*:B\x00W#X\00Y\x0aC)Z/
+/41 28 2a 3a 42 00 57 23 58 00 59 0a 43 29 5a/Bx,hex,alt_verbnames
+------------------------------------------------------------------
+        Bra
+        A
+        *MARK B\x{0}WC
+        Z
+        Ket
+        End
+------------------------------------------------------------------
+
+# /A(*:B\x00W#X\00Y\x0aC)Z/
+/41 28 2a 3a 42 00 57 23 58 00 59 0a 43 29 5a/Bx,hex
+------------------------------------------------------------------
+        Bra
+        A
+        *MARK B\x{0}W#X\x{0}Y\x{a}C
+        Z
+        Ket
+        End
+------------------------------------------------------------------
+
+# /A(?C{X\x00Y})B/
+/41 28 3f 43 7b 58 00 59 7d 29 42/B,hex
+------------------------------------------------------------------
+        Bra
+        A
+        CalloutStr {X\x{0}Y} 5 10 1
+        B
+        Ket
+        End
+------------------------------------------------------------------
+
+# /A(?#X\x00Y)B/
+/41 28 3f 23 7b 00 7d 29 42/B,hex
+------------------------------------------------------------------
+        Bra
+        AB
+        Ket
+        End
+------------------------------------------------------------------
+
 # End of testinput2 
